# jira-cli

./: .gitignore  README.md  pyproject.toml
jira_cli/: __init__.py  __main__.py  main.py
jira_cli/api/: client.py
jira_cli/internal/: __init__.py
jira_cli/internal/cmd/: init.py  me.py  root.py
jira_cli/internal/cmd/board/: __init__.py  board.py
jira_cli/internal/cmd/epic/: __init__.py  epic.py
jira_cli/internal/cmd/issue/: __init__.py  assign.py  comment.py  comments.py  create.py  delete.py  edit.py  issue.py  link.py  list.py  move.py  remote_link.py  unlink.py  view.py  watch.py  worklog.py  worklogs.py
jira_cli/internal/cmd/project/: __init__.py  project.py
jira_cli/internal/cmd/release/: __init__.py  release.py
jira_cli/internal/cmd/sprint/: __init__.py  sprint.py
jira_cli/internal/query/: __init__.py  issue.py
jira_cli/pkg/: __init__.py
jira_cli/pkg/adf/: __init__.py  adf.py
jira_cli/pkg/jira/: __init__.py  board.py  client.py  client_ext.py  create.py  delete.py  edit.py  issue.py  markdown.py  me.py  project.py  release.py  sprint.py  types.py
jira_cli/pkg/netrc/: __init__.py
tests/: live_test.sh  test_client.py  test_go_compat.py  test_mock_api.py  test_new_commands.py
